<resources>
    <string name="app_name">FoodApplication</string>
    <string name="hello"> Hello ^_^</string>
    <string name="name">Elham</string>
    <string name="what_you_want_eat_today">What you want eat today?</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="weekly">Weekly</string>
    <string name="favourite">Favourite</string>
    <string name="filter">Filter</string>
    <string name="type">Type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_">Name</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="your_email_or_phone">Your email </string>
    <string name="skip">  SKIP->  </string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_">LOGIN</string>
    <string name="full_name">Full name</string>
    <string name="e_mail">E-mail</string>
    <string name="password_">Password</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="default_web_client_id">default web client id</string>
    <string name="facebook_app_id">YOUR_FACEBOOK_APP_ID</string>
    <string name="fb_login_protocol_scheme">fbYOUR_FACEBOOK_APP_ID</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="create_an_account">Create an account</string>
    <string name="logout">Logout</string>
    <string name="get_started">Get started</string>
    <string name="food_for_everyone">Food for Everyone</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="day">Day</string>
    <string name="weekly_meal_planner">Weekly Meal Planner</string>
    <string name="take_a_look_to_learn">Take a look to learn</string>
    <string name="today_s_suggested_meal">Today\'s suggested meal</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="reset">Reset</string>
    <string name="meal_planner">Meal Planner</string>
</resources>