<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/home_activity"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
            <item
                android:id="@+id/search_activity"
                android:icon="@drawable/baseline_search_24"
                android:title="@string/search" />
    <item
        android:id="@+id/filter_activity"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter" />
         <item
             android:id="@+id/navigation_weekly"
             android:icon="@drawable/ic_calendar"
             android:title="@string/weekly" />
         <item
             android:id="@+id/navigation_favourite"
             android:icon="@drawable/ic_favourite"
             android:title="@string/favourite" />


    </menu>
