<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="161dp"
        android:layout_marginTop="36dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo" />

    <!-- Password EditText -->

    <!-- Phone EditText -->

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/create_an_account"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:background="@drawable/input_design"
        android:backgroundTint="#E1E4E6"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="324dp" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_design"
        android:backgroundTint="#E1E4E6"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/password_"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@id/signup_email"
        app:layout_constraintStart_toStartOf="@id/signup_email"
        app:layout_constraintTop_toBottomOf="@id/signup_email" />

    <ImageButton
        android:id="@+id/passwordVisibilityToggle"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/visibility"
        app:layout_constraintBottom_toBottomOf="@+id/signup_password"
        app:layout_constraintEnd_toEndOf="@+id/signup_password"
        app:layout_constraintTop_toTopOf="@+id/signup_password" />

    <!-- Sign Up Button -->

    <!-- Already have an account TextView -->


    <Button
        android:id="@+id/signup_button"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/app_color"
        android:text="SIGN UP"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signup_password"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <TextView
        android:id="@+id/loginRedirectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/app_color"
        android:text="@string/already_have_an_account_login"
        app:layout_constraintEnd_toEndOf="@id/signup_button"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@id/signup_button"
        app:layout_constraintTop_toBottomOf="@id/signup_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>