<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".filterFragment.view.FilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".filter.view.FilterMealsActivity">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:chipStrokeColor="@color/app_color"
                android:textColor="@color/app_color"
                android:text="@string/category"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="100dp"
                app:chipStrokeColor="@color/app_color"
                android:textColor="@color/app_color"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ingredient" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="100dp"
                app:chipStrokeColor="@color/app_color"
                android:textColor="@color/app_color"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/country" />
        </com.google.android.material.chip.ChipGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:fillViewport="true"
                    android:scrollbarStyle="outsideOverlay"
                    tools:context=".filter.view.FilterMealsActivity">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="8dp"
                        tools:ignore="RtlSymmetry" />
                </ScrollView>

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <ScrollView
                    android:id="@+id/scrollView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:fillViewport="true"
                    android:scrollbarStyle="outsideOverlay"
                    tools:context=".filter.view.FilterMealsActivity">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewFilterMeals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="vertical"
                        android:paddingStart="8dp"
                        tools:ignore="RtlSymmetry" />
                </ScrollView>

            </LinearLayout>
            <ImageView
                android:id="@+id/fullScreenImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:visibility="visible"
                android:src="@drawable/emm_search"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>